# template

./: .gitignore  COOKIECUTTER_README.md  README.md  dev.Dockerfile  generate_cookiecutter.py
.devcontainer/: .env  .pre-commit-config.yaml  compose.yaml  devcontainer.json  on-start-host.sh  pre-commit
.github/workflows/: run-pre-commit-hooks.yml  run-tests.yml
template_core/: README.md  pyproject.toml
template_core/template_core/cli/: __init__.py
template_core/tests/: test_import.py
template_core/tests/test_cli/: test_cli.py
template_core/tests/test_core/: __init__.py
template_tools/: .pre-commit-config.yaml  README.md  pyproject.toml
template_tools/template_tools/cli/: __init__.py
template_tools/tests/: test_import.py
template_tools/tests/test_cli/: test_cli.py
