[tool.poetry]
name = "template_core"
version = "0.0.0"
description = ""
authors = ["Jack HJ Fission <jackhjfission@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0"
template_tools = { path = "../template_tools/", develop = true }

[tool.poetry.scripts]
template = "template_core.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
approvaltests = "^15.1.0"
ipykernel = "^6.30.1"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# ignore unused imports in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
